[gd_scene load_steps=7 format=2]

[ext_resource path="res://parts/misc/Pin.tscn" type="PackedScene" id=1]
[ext_resource path="res://parts/accessories/Clock.gd" type="Script" id=2]
[ext_resource path="res://assets/symbols.png" type="Texture" id=3]
[ext_resource path="res://assets/blocks.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.1629, 44.6801 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64.4054, 14.0436 )

[node name="Clock" type="Node2D"]
script = ExtResource( 2 )

[node name="Symbol" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 530, 162, 122 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 49.6927, 53.9956 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10.4501, -4.77493 )
shape = SubResource( 2 )

[node name="Inputs" type="Node2D" parent="."]

[node name="Outputs" type="Node2D" parent="."]

[node name="Pin1" parent="Outputs" instance=ExtResource( 1 )]
position = Vector2( 80.5, 0 )

[node name="Pin2" parent="Outputs" instance=ExtResource( 1 )]
position = Vector2( 80.5, 20 )

[node name="Pin3" parent="Outputs" instance=ExtResource( 1 )]
position = Vector2( 80.5, 80 )

[node name="VSlider" type="VSlider" parent="."]
margin_left = -70.0
margin_top = -10.0
margin_right = -54.0
margin_bottom = 90.0
hint_tooltip = "Rate / Count"
min_value = 1.0
max_value = 6.0
value = 1.0
tick_count = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LED" type="Sprite" parent="."]
position = Vector2( 50.5, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 124, 80, 21, 21 )

[node name="Start" type="Button" parent="."]
margin_left = -30.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 30.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fire" type="Button" parent="."]
margin_left = -30.0
margin_top = 40.0
margin_right = 20.0
margin_bottom = 60.0
text = "Fire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = -30.0
margin_top = 70.0
margin_right = 20.0
margin_bottom = 90.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Fire" to="." method="_on_Fire_button_down"]
[connection signal="button_down" from="Reset" to="." method="_on_Reset_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
